[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-isa"
version = "1.0.0"
description = "Cocapn Fleet module — flux-isa"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
flux_isa = "flux_isa:main"
